<resources>
    <string name="app_name">Test Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="list_view_button">List View</string>
    <string name="recycler_view_button">Recycler View</string>
    <string name="fragments_button">Fragments</string>
    <string name="fragment_one_send_button">Send to fragment 2</string>
    <string name="fragment_one_text">Fragment One</string>
    <string name="fragment_edit_text">Type your text here</string>
    <string name="fragment_two_text">Fragment Two</string>
    <string name="fragment_two_send_button">Send to fragment 1</string>
    <string name="welcome_text">Welcome!!</string>
    <string name="login_username">Username or Email</string>
    <string name="login_password">Password</string>
    <string name="login_signin">Sign In</string>
</resources>
