<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/login_username"
            android:ems="10"
            android:id="@+id/login_username"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="105dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/login_password"
            android:ems="10"
            android:id="@+id/login_password"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/login_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signin_button" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="150dp" app:layout_constraintTop_toBottomOf="@+id/login_username"
            android:onClick="onLoginClick"/>
</android.support.constraint.ConstraintLayout>