<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:layout_editor_absoluteY="81dp">

    <!-- TODO: Update blank fragment layout -->

    <TextView
            android:text="@string/fragment_one_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
           android:gravity="center"/>

    <Button
            android:text="@string/fragment_one_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/fragment_edit_text"
            android:ems="10"
            android:id="@+id/fragment_one_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="184dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginBottom="172dp"
            app:layout_constraintBottom_toTopOf="@+id/button5"/>
</android.support.constraint.ConstraintLayout>